kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-webapi-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: my-webapi-app
  type: ClusterIP
